# exercise3-markaren

./: CMakeLists.txt  README.md  main.cpp
.github/classroom/: autograding.json
data/: data.txt
include/: FileReader.hpp
src/: CMakeLists.txt  FileReader.cpp
tests/: CMakeLists.txt  test_file_reader.cpp
